# Parallel_comps

./: .gitignore  README  Лекция_AK.ppt
Lab_1/: Lab_1.cbp  main.cpp
Lab_2/: Lab_2.cbp  main.cpp  main_1.cpp  main_2.cpp  main_2_1.cpp  main_2_2.cpp  makefile
Lab_3/: dev.html  dev.txt  main.cpp  main_3.cpp  makefile  temp.cpp
Lab_4/: CMakeLists.txt  main.cpp  main_1.cpp  main_2.cpp  makefile
Temp/: Temp.cbp  Temp.depend
Temp_mpi/: CMakeLists.txt  Temp.cbp  main.cpp  makefile
